tests/baselines/reference/asyncFunctionDeclaration6.errors.txt
tests/cases/conformance/async/downlevel/asyncFunctionDeclaration/asyncFunctionDeclaration6.ts(6,24): error TS2304: Cannot find name 'await'.


==== tests/cases/conformance/async/downlevel/asyncFunctionDeclaration/asyncFunctionDeclaration6.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    async function foo(a = await): Promise<void> {
                           ~~~~~
!!! error TS2304: Cannot find name 'await'.
    }